istio-workshop/hipster-app-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: hipster-app
spec:
  mtls:
    mode: PERMISSIVE
