istio-workshop/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: hipster-app
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
      resources:
        limits:
          cpu: "0.5"
          memory: "512Mi"
        requests:
          cpu: "0.1"
          memory: "256Mi"
  restartPolicy: Always
