istio-workshop/addons-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: addons-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "control.test"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: control-apps
  namespace: istio-system
spec:
  hosts:
    - "control.test"
  gateways:
    - addons-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
    - match:
        - uri:
            prefix: /jaeger
      route:
        - destination:
            host: tracing
            port:
              number: 80
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana
            port:
              number: 3000
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argo-cd-argocd-server.argocd.svc.cluster.local
            port:
              number: 80
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: tracing
#   namespace: istio-system
# spec:
#   hosts:
#     - "control.local"
#   gateways:
#     - addons-gateway
#   http:
#     - match:
#         - uri:
#             prefix: /jaeger
#       route:
#         - destination:
#             host: tracing
#             port:
#               number: 80

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: prometheus
#   namespace: istio-system
# spec:
#   hosts:
#     - "control.local"
#   gateways:
#     - addons-gateway
#   http:
#     - match:
#         - uri:
#             prefix: /prometheus
#       route:
#         - destination:
#             host: prometheus
#             port:
#               number: 9090
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: grafana
#   namespace: istio-system
# spec:
#   hosts:
#     - "control.local"
#   gateways:
#     - addons-gateway
#   http:
#     - match:
#         - uri:
#             prefix: /grafana
#       route:
#         - destination:
#             host: grafana
#             port:
#               number: 3000
