istio-workshop/frontend-virtualservice-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-split
  namespace: hipster-app
spec:
  hosts:
    - app.test
  gateways:
    - istio-system/app-gateway
  http:
    - route:
        - destination:
            host: frontend
            subset: v1
          weight: 50
        - destination:
            host: frontend
            subset: v2
          weight: 50
