istio-workshop/google-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-serviceentry
spec:
  hosts:
    - google.com
    - www.google.com
  ports:
    - number: 443
      name: google-https
      protocol: HTTPS
    - number: 80
      name: google-http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
